--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand mt-3" href="index.html"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
+  <a class="navbar-brand mt-3" href="index.html
+"><h2 class="text-dark ml-2">OLYMPICS</h2></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,25 +35,25 @@
       <ul class="navbar-nav mr-auto"></ul>
       <ul class="nav navbar-nav navbar-right-custom">
       <li class="nav-item">
-        <a class="nav-link" href="data.html">DATA</a>
+        <a class="nav-link" href="Flask-API/templates/data.html">DATA</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Visualizations</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="chart0.html">Medals Timeline</a>
-          <a class="dropdown-item" href="chart1.html">Gender & Body Composition</a>
-          <a class="dropdown-item" href="chart2.html">Medals VS GDP</a>
-          <a class="dropdown-item" href="chart3.html">Medals World View - Seasons</a>
-          <a class="dropdown-item" href="chart4.html">Medals World View - Sport</a>
+          <a class="dropdown-item" href="Flask-API/templates/chart0.html">Medals Timeline</a>
+          <a class="dropdown-item" href="Flask-API/templates/chart1.html">Gender & Body Composition</a>
+          <a class="dropdown-item" href="Flask-API/templates/chart2.html">Medals VS GDP</a>
+          <a class="dropdown-item" href="Flask-API/templates/chart3.html">Medals World View - Seasons</a>
+          <a class="dropdown-item" href="Flask-API/templates/chart4.html">Medals World View - Sport</a>
         </div>
       <li class="nav-item">
-        <a class="nav-link" href="analysis.html">Analysis</a>
+        <a class="nav-link" href="Flask-API/templates/analysis.html">Analysis</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="olympic_facts.html">Olympic Facts</a>
+        <a class="nav-link" href="Flask-API/templates/olympic_facts.html">Olympic Facts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="machine_learning.html">Olympic Medal Predictions</a>
+        <a class="nav-link" href="Flask-API/templates/machine_learning.html">Olympic Medal Predictions</a>
       </li>
       </ul>
   </div>
@@ -63,7 +64,7 @@
     <div class= "container">
       <div class="row">
           <div class="col-md-12">  
-            <img class="col-md-12" id="photo" src="../static/assets/images/images_home/index.png"/>   
+            <img class="col-md-12" id="photo" src="Flask-API/static/assets/images/images_home/index.png"/>   
           </div>
       </div>
     </div>  
